# eegdash-llm-tagger

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  eegdash_metadata.py  eegdash_scraper.py  eegdash_tagger.py  environment.yml  fetch_complete_datasets.py  file_providers.py  llm_output.json  output.json  prompt.md  pyproject.toml  result_training.json  setup.py  show_json_output.py  show_llm_output.py  test.json  test_5_samples.json  test_extraction.py  test_github_api.py  training_training.json  update_csv_from_llm.py
data/processed/: few_shot_examples.json
scripts/: fetch_complete_datasets.py  fetch_incomplete_datasets.py  pipeline_example.py  tag_with_llm.py  test_llm_tagger.py  update_csv.py
src/eegdash_tagger/: __init__.py
src/eegdash_tagger/client/: __init__.py  api_client.py
src/eegdash_tagger/evaluation/: accuracy.py
src/eegdash_tagger/metadata/: __init__.py  parser.py  providers.py
src/eegdash_tagger/scraping/: __init__.py  abstract_fetcher.py  dataset_filters.py  enrichment.py  scraper.py
src/eegdash_tagger/tagging/: __init__.py  llm_tagger.py  tagger.py
src/eegdash_tagger/utils/: __init__.py  csv_updater.py
tests/: __init__.py  test_api_client.py  test_github_api.py  test_metadata.py
tools/: create_test_set.py  show_metadata.py
